major & minor changes

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600');
 
 
-
-
 /*--- 1. Default css starts ---*/
 
 html,body{
@@ -23,6 +21,8 @@ body{
     line-height: 1.7;
     color: #333333;
     font-weight: 400;
+
+    overflow-x: hidden;
 }
 
 h1,
